Style changes and list-div overflow corrected

--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@ html{
 }
 
 body{
-    background-color: #a3ffff;
+    font-family: "Roboto";
+    background-color: rgb(151, 223, 247);
+    background-image: url("https://images.wallpaperscraft.com/image/single/notebook_coffee_book_166646_3840x2160.jpg");
+    height: 100vh;
+    width: 100vw;
 }
 
 .card{
-    background-color: aliceblue;
     border-radius: 7px;
     display: flex;
     flex-direction: column;
@@ -15,32 +18,55 @@ body{
 }
 
 #card-title{
+    background-color: #004444;
+    color: white;
+    font-size: 15px;
+    font-weight: normal;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-basis: 7%;
+    border-radius: 5px;
+    margin: 0px;
 }
 
 #list-div{
     flex-basis: 80%;
+    overflow: auto;
+    background-color: rgba(147, 130, 99, 0.5);
+    margin: 5px 0px 5px 0px;
+    border-radius: 5px;
+}
+
+li:nth-child(2n){
+    background-color: #f7f7f7;
 }
 
 ul{
-    padding: 10px;
+    margin:0;
+    padding:0;
     list-style: none;
+    width: 100%;
 }
 
 .assignment-item{
     display: flex;
     flex-direction: row;
-    }
+    background-color: #fff;
+    line-height: 0px;
+    padding: 10px;
+    color: #666;
+    border-radius: 6px;
+    margin: 5px 0px;
+    margin: 10px;
+}
 
 .content-container{
     flex-basis: 85%;
 }
 
 .assignment-name{
-    margin: 10px;
+    margin: 10px 0px 10px 0px;
 }
 
 .input-container{
@@ -64,15 +90,19 @@ ul{
 }
 
 .delete-button{
-    width: 70%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .bottom-container{
     display: flex;
     flex-direction: column;
     flex-basis: 13%;
-    }
+    margin: 0px;
+    width:100% ;
+    background-color: #f7f7f7;
+    border-radius: 5px;
+}
 
 #name-container, .calculate-container{
     display: flex;
@@ -88,19 +118,38 @@ ul{
     margin: 10px;
 }
 
+input{
+    font-size: 15px;
+    background-color: #f7f7f700;
+    color: #004444;
+    border: 0px;
+    border-bottom: 2px solid #0044443e;
+}
+
 #add-button, #calculate-button{
     flex-grow: 2;
     height: 100%;
+    width: 30px;
+    border: 1px #004444 solid;
 }
 
 button{
     cursor: pointer;
+    border: none;
+    background-color: #fbfbfb00;
+    border-radius: 3px;
 }
+
+button:hover{
+    scale: 0.9;
+    background-color: #128383;
+}
+
 
 @media (min-width: 700px){
     .card{
-        width: 700px;
-        height: 90vh;
+        width: 500px;
+        height: 95vh;
         margin: 0 auto;
     }
 
@@ -121,4 +170,9 @@ button{
     .delete-button{
         height: 90%;
     }
+
+    #name-input, .target-grade-input {
+        font-size: 1.3rem;
+    }
+    
 }
